--- a/odoo/custom/src/repos.yaml
+++ b/odoo/custom/src/repos.yaml
@@ -62,6 +62,15 @@ account-payment:
   merges:
     - origin $ODOO_VERSION
 
+account-reconcile:
+  defaults:
+    depth: $DEPTH_MERGE
+  remotes:
+    origin: https://github.com/OCA/account-reconcile.git
+  target: origin $ODOO_VERSION
+  merges:
+    - origin $ODOO_VERSION
+
 budgeting:
   defaults:
     depth: $DEPTH_MERGE
