--- a/odoo/custom/src/addons.yaml
+++ b/odoo/custom/src/addons.yaml
@@ -40,6 +40,7 @@ contract:
 
 hr-expense:
   - hr_expense_advance_clearing
+  - hr_expense_pay_to_vendor
 
 l10n-thailand:
   - l10n_th_account_asset_management
