--- a/odoo/custom/src/repos.yaml
+++ b/odoo/custom/src/repos.yaml
@@ -151,6 +151,15 @@ reporting-engine:
   target: origin $ODOO_VERSION
   merges:
     - origin $ODOO_VERSION
+    
+sale-workflow:
+  defaults:
+    depth: $DEPTH_MERGE
+  remotes:
+    origin: https://github.com/OCA/sale-workflow.git
+  target: origin $ODOO_VERSION
+  merges:
+    - origin $ODOO_VERSION
 
 server-tools:
   defaults:
