--- a/odoo/custom/src/repos.yaml
+++ b/odoo/custom/src/repos.yaml
@@ -70,6 +70,8 @@ account-payment:
   target: origin $ODOO_VERSION
   merges:
     - origin $ODOO_VERSION
+    - origin refs/pull/490/head # [14.0][ENH] account_payment_multi_deduction: add analytic on payment register wizard
+    
 
 account-reconcile:
   defaults:
