--- a/odoo/custom/src/addons.yaml
+++ b/odoo/custom/src/addons.yaml
@@ -18,6 +18,7 @@ account-financial-tools:
   - account_asset_transfer
   - account_lock_date_update
   - account_menu
+  - account_sequence_option
 
 account-invoicing:
   - account_invoice_payment_retention
@@ -78,6 +79,7 @@ purchase-workflow:
   - purchase_request_exception
   - purchase_request_substate
   - purchase_request_to_requisition
+  - purchase_tier_validation
   - purchase_work_acceptance
   - purchase_work_acceptance_evaluation
   - purchase_work_acceptance_invoice_plan
@@ -95,6 +97,7 @@ sale-workflow:
 
 server-tools:
   - base_exception
+  - base_sequence_option
 
 server-ux:
   - base_substate
