--- a/odoo/custom/src/addons.yaml
+++ b/odoo/custom/src/addons.yaml
@@ -78,6 +78,7 @@ purchase-workflow:
   - purchase_request
   - purchase_request_exception
   - purchase_request_substate
+  - purchase_request_tier_validation
   - purchase_request_to_requisition
   - purchase_tier_validation
   - purchase_work_acceptance
