--- a/odoo/custom/src/repos.yaml
+++ b/odoo/custom/src/repos.yaml
@@ -169,6 +169,7 @@ purchase-workflow:
     - origin refs/pull/1195/head # [14.0][ADD] purchase_request_substate
     - origin refs/pull/1212/head # [14.0][IMP] purchase_work_acceptance_invoice_plan, miscellaneous improvements.
     - origin refs/pull/1216/head # [14.0][ADD] purchase_work_acceptance_tier_validation
+    - origin refs/pull/1766/head # [14.0][FIX] purchase_request
 
 reporting-engine:
   defaults:
